// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render assigned contact 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
      },
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <Image
    resizeMode="contain"
    source={1443235}
    style={
      Object {
        "flexShrink": 1,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "AmaticSC-Bold",
        },
        Object {
          "color": "#007398",
          "fontSize": 42,
          "paddingTop": 10,
        },
      ]
    }
  >
    some header
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#505256",
          "fontSize": 16,
          "paddingHorizontal": 70,
          "paddingVertical": 10,
          "textAlign": "center",
        },
      ]
    }
  >
    some description
  </Text>
</View>
`;

exports[`render with content 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
      },
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <Image
    resizeMode="contain"
    source={1443235}
    style={
      Object {
        "flexShrink": 1,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "AmaticSC-Bold",
        },
        Object {
          "color": "#007398",
          "fontSize": 42,
          "paddingTop": 10,
        },
      ]
    }
  >
    some header
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {
          "color": "#505256",
          "fontSize": 16,
          "paddingHorizontal": 70,
          "paddingVertical": 10,
          "textAlign": "center",
        },
      ]
    }
  >
    some description
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Object {},
      ]
    }
  >
    Content
  </Text>
</View>
`;
